# Supawatch

./: .gitignore  README.md  ast_check.rs  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  ast_output.txt  check_output.txt  check_output_2.txt  schema.sql  tauri.conf.json  test_gen  test_gen.rs  test_keys  test_output.txt  test_parse  test_parse.rs  verify_drop_policy_quote_output.txt  verify_function_parsing.txt  verify_function_parsing_retry.txt  verify_function_return_fix.txt  verify_function_trimming.txt  verify_introspection_output.txt  verify_parsing_output.txt  verify_parsing_output_2.txt  verify_parsing_output_3.txt  verify_parsing_output_4.txt  verify_parsing_output_5.txt  verify_parsing_output_6.txt  verify_policy_quote_output.txt  verify_repro_fix_output.txt  verify_repro_output.txt
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  defaults.rs  diff.rs  fns.rs  generator.rs  introspection.rs  lib.rs  main.rs  models.rs  parsing.rs  schema.rs  state.rs  supabase_api.rs  sync.rs  tray.rs  watcher.rs
src-tauri/src/commands/: admin.rs  app.rs  auth.rs  logs.rs  mod.rs  projects.rs  sql.rs  sync.rs  templates.rs  watcher.rs
src-tauri/src/diff/: mod.rs  objects.rs  repro_types.rs  summary.rs  tables.rs  tests.rs  utils.rs
src-tauri/src/generator/: constraints.rs  mod.rs  objects.rs  roles.rs  tables.rs  tests.rs  types.rs  typescript.rs
src-tauri/src/introspection/: functions.rs  grants.rs  helpers.rs  mod.rs  queries.rs  roles.rs  sequences.rs  tables.rs  types.rs  views.rs
src-tauri/src/parsing/: constraints.rs  functions.rs  helpers.rs  mod.rs  roles.rs  sequences.rs  tables.rs  tests_composite.rs  tests_snippet.rs  types.rs  views.rs
src-tauri/templates/nextjs/: agents.md
src-tauri/templates/vite/: agents.md  package.json  vite.config.ts
src-tauri/templates/vite/app/lib/supabase/: client.ts  server.ts
src-tauri/templates/vite/app/routes/: _index.tsx  sign-up.tsx
src/components/: CreateProjectForm.css  CreateProjectForm.tsx  DiffSidebar.tsx  ImportTemplateDialog.tsx  LogsViewer.css  LogsViewer.tsx  ProjectHeader.tsx  ProjectItem.css  ProjectItem.tsx  ProjectList.css  ProjectList.tsx  ProjectLogs.tsx  PullSidebar.tsx  SeedSidebar.tsx  Settings.css  Settings.tsx  Sidebar.tsx  SqlEditor.tsx  Tabs.css  Tabs.tsx
src/components/sql-editor/: QueryBlock.tsx  QueryInput.tsx  SpecSidebar.tsx  SqlChangesBar.tsx  SqlFormArea.tsx  SqlQueryArea.tsx  SqlResultsArea.tsx  SqlSidebar.tsx  types.ts  utils.ts
src/components/ui/: button.tsx
src/hooks/: useSidebarSpec.ts
src/specs/: index.ts  sidebar.json  types.ts
src/utils/: deeplink.ts  notification.ts  store.ts
