[package]
name = "supawatch"
version = "0.1.0"
description = "Supabase project sync and watch tool"
authors = ["Victor Aremu <me@victorare.mu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [
  "macos-private-api",
  "tray-icon",
  "image-png",
] }
image = "0.24"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.140"

tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }

tauri-plugin-shell = "2.2.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# File watching
notify = "8"
notify-debouncer-mini = "0.6"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt", "fs", "macros"] }
dirs = "6"
thiserror = "2"
once_cell = "1"

# HTTP client for Supabase API
reqwest = { version = "0.12", features = ["json", "multipart"] }
urlencoding = "2"
sqlparser = "0.60.0"
eszip = "0.106.0"
futures = "0.3.31"
async-recursion = "1.1.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
