[package]
name = "harbor"
version = "0.1.0"
description = "Supabase project sync and watch tool"
authors = ["Victor Aremu <me@victorare.mu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "harbor_lib"
path = "src/lib.rs"

[[bin]]
name = "harbor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "~2.4.1", features = [] }

[dependencies]
tauri = { version = "~2.8.0", features = [
  "tray-icon",
  "image-png",
] }
image = "0.24"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.140"

tauri-plugin-shell = "~2.3.3"
tauri-plugin-dialog = "~2.3.2"
tauri-plugin-fs = "~2.4.1"
tauri-plugin-notification = "~2.3.0"

# File watching
notify = "8"
notify-debouncer-mini = "0.6"

# Security
keyring = { version = "3", features = ["apple-native"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt", "fs", "macros", "time"] }
dirs = "6"
thiserror = "2"
once_cell = "1"

# HTTP client for Supabase API
reqwest = { version = "0.12", features = ["json", "multipart"] }
urlencoding = "2"
regex = "1"
sqlparser = { version = "0.60.0", features = ["visitor"] }
eszip = "0.106.0"
futures = "0.3.31"
async-recursion = "1.1.1"
tauri-plugin-store = "~2.3.0"
tauri-plugin-deep-link = "2.4.1"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
